force-app/main/default/objects/Product2/fields/Auteur__c.field-meta.xml
<CustomField>
    <fullName>Auteur__c</fullName>
    <description>Nom de l&apos;auteur du livre.</description>
    <label>Auteur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>