force-app/main/default/objects/Product2/fields/Capacite_Maximale__c.field-meta.xml
<CustomField>
    <fullName>Capacite_Maximale__c</fullName>
    <description>Nombre maximum de participants pour un événement.</description>
    <label>Capacité Maximale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>