force-app/main/default/objects/Product2/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <description>Date et heure de début pour les événements ou voyages.</description>
    <label>Date de Début</label>
    <type>DateTime</type>
</CustomField>