force-app/main/default/objects/Product2/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <description>Date et heure de fin pour les événements ou voyages.</description>
    <label>Date de Fin</label>
    <type>DateTime</type>
</CustomField>