force-app/main/default/objects/Product2/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Durée</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>