force-app/main/default/objects/Product2/fields/Formateur__c.field-meta.xml
<CustomField>
    <fullName>Formateur__c</fullName>
    <label>Formateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>