force-app/main/default/objects/Product2/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>Numéro ISBN du livre pour identification unique.</description>
    <label>ISBN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>