force-app/main/default/objects/Product2/fields/Lien_Achat__c.field-meta.xml
<CustomField>
    <fullName>Lien_Achat__c</fullName>
    <description>Lien d&apos;accès pour les formations en ligne.</description>
    <label>URL d&apos;Accès</label>
    <type>Url</type>
</CustomField>