force-app/main/default/objects/Product2/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <description>Lieu physique où se déroule l'événement ou la formation.</description>
    <label>Lieu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>