force-app/main/default/objects/Product2/fields/Nombre_Participants_Actuels__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Participants_Actuels__c</fullName>
    <description>Nombre de participants actuellement inscrits (calculé par une automatisation).</description>
    <label>Nombre de Participants Actuels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>