force-app/main/default/objects/Product2/fields/Places_Disponibles__c.field-meta.xml
<CustomField>
    <fullName>Places_Disponibles__c</fullName>
    <description>Calcule automatiquement les places restantes pour un événement.</description>
    <formula>Capacite_Maximale__c -  Nombre_Participants_Actuels__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Places Disponibles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>