force-app/main/default/objects/Product2/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>statut du produit</description>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Vénir</fullName>
            </value>
            <value>
                <fullName>En Cours</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>