force-app/main/default/objects/Product2/fields/URL_Acces__c.field-meta.xml
<CustomField>
    <fullName>URL_Acces__c</fullName>
    <description>Lien d'accès pour les formations en ligne.</description>
    <label>URL d'Accès</label>
    <type>Url</type>
</CustomField>