force-app/main/default/objects/Product2/recordTypes/Evenement.recordType-meta.xml
<RecordType>
    <fullName>Evenement</fullName>
    <active>true</active>
    <label>Événement</label>
</RecordType>