force-app/main/default/objects/Product2/recordTypes/Formation_En_Ligne.recordType-meta.xml
<RecordType>
  <fullName>Formation_En_Ligne</fullName>
  <active>true</active>
  <label>Formation En Ligne</label>
</RecordType>