force-app/main/default/objects/Product2/recordTypes/Formation_En_Presentiel.recordType-meta.xml
<RecordType>
    <fullName>Formation_En_Presentiel</fullName>
    <active>true</active>
    <label>Formation En Présentiel</label>
</RecordType>