force-app/main/default/objects/Product2/recordTypes/Livre.recordType-meta.xml
<RecordType>
  <fullName>Livre</fullName>
  <active>true</active>
  <label>Livre</label>
</RecordType>