force-app/main/default/objects/Product2/recordTypes/Voyage.recordType-meta.xml
<RecordType>
  <fullName>Voyage</fullName>
  <active>true</active>
  <label>Voyage</label>
</RecordType>